# funny

./: CMakeLists.txt  README.md  main.c  main.h  structs.h
SDL/: draw.c  draw_map.c  init.c  init_window.c  sdl_thing.c  sdl_thing.h  update.c
create_map/: create_map.c  create_map.h  matrix_business.c  memory_business.c  movement.c
src/: CMakeLists.txt  main.c  main.h  structs.h
src/SDL/: init_window.c  sdl_thing.c  sdl_thing.h  sounds.c  timer.c  title.c  update.c
src/create_map/: create_map.h  memory_business.c  movement.c
